CHANGES IN VERSION 2.9.7
------------------------
 o gsfilter function for restricting result with minimal and maximal gene set size <2016-03-31, Thu>
   + see https://github.com/GuangchuangYu/clusterProfiler/issues/46
 
CHANGES IN VERSION 2.9.6
------------------------
 o add maxGSSize parameter for hypergeometric test <2016-03-09, Wed>
 o add maxGSSize parameter in GSEA analysis. <2016-03-09, Wed>
   + Default of 500 is fairly standard for GSEA analysis.
   + Usually if the geneset > 500, its probability of being called significant by GSEA rises quite dramatically.
 o fixed R check <2016-03-05, Sat>
 o update ReactomePA citation info <2016-02-17, Wed>

CHANGES IN VERSION 2.9.5
------------------------
 o upset plot for enrichResult object <2016-01-22, Fri>
 
CHANGES IN VERSION 2.9.4
------------------------
 o bug fixed in scaling category sizes in enrichMap <2016-01-10, Sun>
   + use setSize in gseResult

CHANGES IN VERSION 2.9.3
------------------------
 o update enrichMap to scale category sizes <2016-01-04, Mon>
 o update 'show' methods of enrichResult and gseaResult <2015-12-29, Tue>
 
CHANGES IN VERSION 2.9.2
------------------------
 o re-design internal function <2015-12-20, Sun>
 
CHANGES IN VERSION 2.9.1
------------------------
 o GSEA: test bimodal separately <2015-10-28, Wed>
 o add NES column in GSEA result <2015-10-28, Wed>
 o use NES instead of ES in calculating p-values. <2015-10-28, Wed>
 o duplicated gene IDs in enrich.internal is not allow. add `unique` to remove duplicated ID. <2015-10-20, Tue>
   + see https://github.com/GuangchuangYu/clusterProfiler/issues/27
   
CHANGES IN VERSION 2.9.0
------------------------
 o BioC 3.3 branch
 
CHANGES IN VERSION 2.7.12
------------------------
 o output a list of data frames by enrichMap via invisible, so that the graph info can be viewed by other tools, eg. Cytoscape. <2015-09-30, Wed>
 
CHANGES IN VERSION 2.7.11
------------------------
 o check whether input geneList is sorted <2015-09-22, Tue>